atualizacao em configuracao no readme e nome do artefato gerado no pom

--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
         <fdk.version>1.0.108</fdk.version>
     </properties>
     <groupId>com.example.fn</groupId>
-    <artifactId>oci-list-instances</artifactId>
+    <artifactId>oci-demo-function</artifactId>
     <version>1.0.0</version>
 
     <repositories>
